--- a/www/langs/custom.ko.json
+++ b/www/langs/custom.ko.json
@@ -1,16 +1,16 @@
 {
     "tr-custom-packages": "설치된 패키지",
     "tr-custom-defaults": "첫 부팅 시 실행되는 스크립트 (uci-defaults)",
-    "tr-postinst": "Postinst(패키지 설치 스크립트)",
-    "tr-uci": "UCI-defaults(부팅 구성 스크립트)",
+    "tr-postinst": "Postinst (패키지 설치 스크립트)",
+    "tr-uci": "UCI-defaults (부팅 구성 스크립트)",
     "tr-package-search": "패키지 검색",
-    "tr-add-commands": "명령 추가",
+    "tr-add-commands": "명령어 추가",
     "tr-base-size": "기본",
-    "tr-added-size": "추가",
-    "tr-total-size": "총계",
+    "tr-added-size": "추가됨",
+    "tr-total-size": "합계",
     "tr-package-size-snapshot-unavailable": "※ SNAPSHOT 버전에서는 패키지 크기 정보를 사용할 수 없습니다",
     "tr-package-size-note": "※ 언어 및 종속성 패키지는 포함되지 않습니다",
-    "tr-uci-size-limit": "※ 파일 크기 제한: 20480 bytes: 20.00 KB",
+    "tr-uci-size-limit": "※ 파일 크기 제한: 20480 바이트: 20.00 KB",
     
     "tr-import-settings": "가져오기",
     "tr-export-settings": "내보내기",
@@ -19,26 +19,26 @@
     "tr-asu-status-online": "온라인",
     "tr-asu-status-offline": "오프라인",
     "tr-asu-status-error": "오류",
-    "tr-asu-status-200": "ASU 서버에 연결 가능합니다. 상태: {status}",
+    "tr-asu-status-200": "ASU 서버에 접근할 수 있습니다. 상태: {status}",
     "tr-asu-status-500": "ASU 서버가 내부 오류로 응답했습니다. 상태: {status}",
     "tr-asu-status-unreachable": "ASU 서버가 예상치 못한 상태로 응답했습니다: {status}",
-    "tr-asu-status-networkfail": "ASU 서버에 연결할 수 없습니다: {error}",
+    "tr-asu-status-networkfail": "ASU 서버에 접근하지 못했습니다: {error}",
     
     "tr-extended-info": "지역 및 ISP 정보",
     "tr-loading": "로딩 중…",
     "tr-notice": "알림",
     "tr-country": "지역",
     "tr-timezone": "시간대",
-    "tr-zonename": "지역명",
+    "tr-zonename": "지역 이름",
     "tr-isp": "ISP",
     "tr-as": "AS 번호",
     "tr-ip-address": "주소",
-    "tr-method": "연결 방식",
+    "tr-method": "연결 유형",
 
-    "tr-basic-configuration": "기본 설정",
+    "tr-basic-configuration": "기본 구성",
     "tr-language": "언어",
     "tr-device-name": "장치 이름",
-    "tr-root-password": "루트 비밀번호",
+    "tr-root-password": "Root 비밀번호",
     "tr-lan-ipv4-address": "LAN IPv4 주소",
     "tr-lan-ipv6-address": "LAN IPv6 주소",
     "tr-ssh-interface": "SSH 인터페이스",
@@ -46,7 +46,7 @@
     "tr-flow-offloading-type": "플로우 오프로딩 유형",
     "tr-restore-backup-path": "백업 복원 경로",
 
-    "tr-wi-fi-configuration": "Wi-Fi 설정",
+    "tr-wi-fi-configuration": "Wi-Fi 구성",
     "tr-wi-fi-mode": "Wi-Fi 모드",
     "tr-wi-fi-ssid": "Wi-Fi SSID",
     "tr-wi-fi-password": "Wi-Fi 비밀번호",
@@ -72,11 +72,11 @@
     "tr-pppoe-username": "사용자 이름",
     "tr-pppoe-password": "비밀번호",
 
-    "tr-ds-lite-settings": "DS-Lite 설정",
+    "tr-dslite-settings": "DS-Lite 설정",
     "tr-dslite-aftr-type": "AFTR 유형",
     "tr-dslite-area": "지역",
     "tr-dslite-aftr-ipv6-address": "AFTR 주소",
-    "tr-dslite-notice1": "참고: 실제 값과 다를 수 있습니다.",
+    "tr-dslite-notice1": "참고: 실제 값은 다를 수 있습니다.",
 
     "tr-mape-type": "주소 유형",
     "tr-br": "피어 주소 (BR)",
@@ -89,8 +89,8 @@
     "tr-psid-offset": "PSID 오프셋",
     "tr-psid-length": "PSID 길이",
     "tr-gua-prefix": "GUA 접두사",
-    "tr-mape-notice1": "참고: 실제 값과 다를 수 있습니다.",
-    "tr-mape-notice2": "참고: 포트 1-1023은 특권 포트입니다. 자세한 내용은 ISP에 문의하세요.",
+    "tr-mape-notice1": "참고: 실제 값은 다를 수 있습니다.",
+    "tr-mape-notice2": "참고: 포트 번호 1-1023은 특권 포트입니다. 자세한 내용은 ISP에 문의하세요.",
 
     "tr-ap-network-settings": "AP 네트워크 설정",
     "tr-ap-ip-address": "IP 주소",
@@ -110,7 +110,7 @@
     "tr-network-device-backlog": "네트워크 장치 백로그",
     "tr-socket-max-connections": "소켓 최대 연결 수",
     "tr-tcp-congestion-control": "TCP 혼잡 제어",
-    "tr-cubic-default": "cubic(기본값)",
+    "tr-cubic-default": "cubic (기본값)",
     "tr-bbr": "BBR",
     "tr-reno": "Reno",
     "tr-disabled-mode": "비활성화 모드",
@@ -150,38 +150,40 @@
     "tr-tui-no": "아니오",
     "tr-tui-ok": "확인",
     "tr-tui-cancel": "취소",
+    "tr-tui-choice": "선택",
     
-    "tr-tui-review-configuration": "설정 검토 및 적용",
     "tr-tui-view-device-info": "장치 정보 보기",
     "tr-tui-view-package-list": "패키지 목록 보기",
-    "tr-tui-view-config-vars": "설정 변수 보기",
+    "tr-tui-view-config-vars": "구성 변수 보기",
     "tr-tui-view-postinst": "postinst.sh 보기",
     "tr-tui-view-setup": "setup.sh 보기",
-    "tr-tui-apply-config": "설정 적용",
-    "tr-tui-device-information": "장치 정보",
-    "tr-tui-package-list": "패키지 목록",
-    "tr-tui-config-vars": "설정 변수",
+    "tr-tui-review-configuration": "구성 검토 및 적용",
+    "tr-tui-apply": "구성 적용",
     "tr-tui-no-packages": "선택된 패키지가 없습니다",
-    "tr-tui-no-config-vars": "설정 변수가 없습니다",
+    "tr-tui-no-config-vars": "설정된 구성 변수가 없습니다",
     "tr-tui-postinst-not-found": "postinst.sh 파일을 찾을 수 없습니다",
     "tr-tui-setup-not-found": "setup.sh 파일을 찾을 수 없습니다",
-    "tr-tui-apply-confirm": "이 설정을 적용하시겠습니까?\n\n다음을 실행합니다:\n1. postinst.sh를 통한 패키지 설치\n2. setup.sh를 통한 설정 적용\n3. 선택적으로 재부팅\n\n계속하시겠습니까?",
-    "tr-tui-installing-packages": "패키지 설치 실행 중...",
-    "tr-tui-applying-config": "시스템 설정 적용 중...",
-    "tr-tui-config-applied": "설정이 성공적으로 적용되었습니다!\n\n지금 재부팅하시겠습니까?",
-    "tr-tui-auto-config-applied": "자동 설정이 적용되었습니다!",
-    "tr-tui-use-auto-config": "이 자동 감지된 설정을 사용하시겠습니까?",
-    "tr-tui-package-categories": "패키지 카테고리",
-    "tr-tui-select-category": "카테고리 선택:",
+    "tr-tui-apply-confirm-title": "다음 작업이 실행됩니다:",
+    "tr-tui-apply-confirm-step1": "1. postinst.sh를 통해 패키지 설치",
+    "tr-tui-apply-confirm-step2": "2. setup.sh를 통해 설정 적용",
+    "tr-tui-apply-confirm-step3": "3. 재시작 (확인 필요)",
+    "tr-tui-apply-confirm-question": "지금 실행하시겠습니까?",
+    "tr-tui-installing-packages": "패키지 설치 중",
+    "tr-tui-applying-config": "시스템 구성 적용 중",
+    "tr-tui-config-applied": "구성이 성공적으로 적용되었습니다!",
+    "tr-tui-reboot-question": "지금 재시작하시겠습니까?",
+    "tr-tui-auto-config-applied": "자동 구성이 적용되었습니다!",
+    "tr-tui-use-auto-config": "자동 감지된 구성을 사용하시겠습니까?",
+    
     "tr-tui-space-toggle": "스페이스=전환",
     
     "tr-tui-ui-mode-select": "UI 모드 선택:",
-    "tr-tui-ui-whiptail": "whiptail (대화 상자 기반 TUI)",
+    "tr-tui-ui-whiptail": "whiptail (대화상자 기반 TUI)",
     "tr-tui-ui-simple": "simple (목록 기반 TUI)",
     "tr-tui-ui-choice": "선택",
-    "tr-tui-ui-installing": "whiptail 설치 중...",
+    "tr-tui-ui-installing": "whiptail 설치 중",
     "tr-tui-ui-install-success": "whiptail이 성공적으로 설치되었습니다!",
-    "tr-tui-ui-install-failed": "설치 실패, simple 모드를 사용합니다",
+    "tr-tui-ui-install-failed": "설치 실패, 간단한 모드를 사용합니다",
     "tr-tui-gua": "GUA",
     "tr-tui-pd": "PD"
 }
