--- a/www/langs/custom.ja.json
+++ b/www/langs/custom.ja.json
@@ -152,7 +152,7 @@
     "tr-tui-cancel": "キャンセル",
     
     "tr-tui-view-device-info": "デバイス情報",
-    "tr-tui-view-package-list": "パッケージ一覧",
+    "tr-tui-view-package-list": "設定パッケージ",
     "tr-tui-view-config-vars": "設定変数",
     "tr-tui-view-postinst": "postinst.sh",
     "tr-tui-view-setup": "setup.sh",
