--- a/www/langs/custom.en.json
+++ b/www/langs/custom.en.json
@@ -153,7 +153,7 @@
     "tr-tui-choice": "Choice",
     
     "tr-tui-view-device-info": "View Device Information",
-    "tr-tui-view-package-list": "View Configured Packages"
+    "tr-tui-view-package-list": "View Configured Packages",
     "tr-tui-view-config-vars": "View Configuration Variables",
     "tr-tui-view-postinst": "View postinst.sh",
     "tr-tui-view-setup": "View setup.sh",
