--- a/www/langs/custom.vi.json
+++ b/www/langs/custom.vi.json
@@ -153,7 +153,7 @@
     "tr-tui-choice": "Lựa Chọn",
     
     "tr-tui-view-device-info": "Xem Thông Tin Thiết Bị",
-    "tr-tui-view-package-list": "Xem Danh Sách Gói",
+    "tr-tui-view-package-list": "Xem Gói Đã Cấu Hình",
     "tr-tui-view-config-vars": "Xem Biến Cấu Hình",
     "tr-tui-view-postinst": "Xem postinst.sh",
     "tr-tui-view-setup": "Xem setup.sh",
