--- a/www/langs/custom.ja.json
+++ b/www/langs/custom.ja.json
@@ -150,9 +150,6 @@
     "tr-tui-no": "いいえ",
     "tr-tui-ok": "OK",
     "tr-tui-cancel": "キャンセル",
-
-    "tr-tui-isp-info": "ISP情報:",
-    "tr-tui-manual-config-required": "手動で接続設定を行ってください。",
     
     "tr-tui-view-device-info": "デバイス情報",
     "tr-tui-view-package-list": "設定パッケージ",
@@ -186,5 +183,8 @@
     "tr-tui-ui-install-success": "whiptailのインストールに成功しました！",
     "tr-tui-ui-install-failed": "インストール失敗、simpleモードを使用します",   
     "tr-tui-gua": "GUA",
-    "tr-tui-pd": "PD"
+    "tr-tui-pd": "PD",
+
+    "tr-tui-isp-info": "ISP情報:",
+    "tr-tui-manual-config-required": "手動で接続設定を行ってください。"
 }
