--- a/www/langs/custom.en.json
+++ b/www/langs/custom.en.json
@@ -151,9 +151,6 @@
     "tr-tui-ok": "OK",
     "tr-tui-cancel": "Cancel",
     "tr-tui-choice": "Choice",
-
-    "tr-tui-isp-info": "ISP Information:",
-    "tr-tui-manual-config-required": "Please configure connection settings manually.",
     
     "tr-tui-view-device-info": "View Device Information",
     "tr-tui-view-package-list": "View Configured Packages",
@@ -188,5 +185,8 @@
     "tr-tui-ui-install-success": "whiptail installed successfully!",
     "tr-tui-ui-install-failed": "Installation failed, using simple mode",
     "tr-tui-gua": "GUA",
-    "tr-tui-pd": "PD"
+    "tr-tui-pd": "PD",
+
+    "tr-tui-isp-info": "ISP Information:",
+    "tr-tui-manual-config-required": "Please configure connection settings manually."
 }
