--- a/www/langs/custom.de.json
+++ b/www/langs/custom.de.json
@@ -163,11 +163,10 @@
     "tr-tui-no-config-vars": "Keine Konfigurationsvariablen festgelegt",
     "tr-tui-postinst-not-found": "postinst.sh-Datei nicht gefunden",
     "tr-tui-setup-not-found": "setup.sh-Datei nicht gefunden",
-    "tr-tui-apply-confirm-title": "Folgende Vorgänge werden ausgeführt:",
     "tr-tui-apply-confirm-step1": "1. Pakete über postinst.sh installieren",
     "tr-tui-apply-confirm-step2": "2. Einstellungen über setup.sh anwenden",
     "tr-tui-apply-confirm-step3": "3. Neustart (mit Bestätigung)",
-    "tr-tui-apply-confirm-question": "Jetzt ausführen?",
+    "tr-tui-apply-confirm-question": "Ausführen?",
     "tr-tui-installing-packages": "Pakete werden installiert",
     "tr-tui-applying-config": "Systemkonfiguration wird angewendet",
     "tr-tui-config-applied": "Konfiguration erfolgreich angewendet!",
