--- a/www/langs/custom.en.json
+++ b/www/langs/custom.en.json
@@ -163,11 +163,10 @@
     "tr-tui-no-config-vars": "No configuration variables set",
     "tr-tui-postinst-not-found": "postinst.sh file not found",
     "tr-tui-setup-not-found": "setup.sh file not found",
-    "tr-tui-apply-confirm-title": "The following will be executed:",
     "tr-tui-apply-confirm-step1": "1. Install packages via postinst.sh",
     "tr-tui-apply-confirm-step2": "2. Apply settings via setup.sh",
     "tr-tui-apply-confirm-step3": "3. Reboot (with confirmation)",
-    "tr-tui-apply-confirm-question": "Execute now?",
+    "tr-tui-apply-confirm-question": "Execute?",
     "tr-tui-installing-packages": "Installing packages",
     "tr-tui-applying-config": "Applying system configuration",
     "tr-tui-config-applied": "Configuration applied successfully!",
