--- a/www/langs/custom.fr.json
+++ b/www/langs/custom.fr.json
@@ -163,11 +163,10 @@
     "tr-tui-no-config-vars": "Aucune variable de configuration définie",
     "tr-tui-postinst-not-found": "Fichier postinst.sh introuvable",
     "tr-tui-setup-not-found": "Fichier setup.sh introuvable",
-    "tr-tui-apply-confirm-title": "Les opérations suivantes seront effectuées :",
     "tr-tui-apply-confirm-step1": "1. Installer les paquets via postinst.sh",
     "tr-tui-apply-confirm-step2": "2. Appliquer les paramètres via setup.sh",
     "tr-tui-apply-confirm-step3": "3. Redémarrer (avec confirmation)",
-    "tr-tui-apply-confirm-question": "Exécuter maintenant ?",
+    "tr-tui-apply-confirm-question": "Exécuter ?",
     "tr-tui-installing-packages": "Installation des paquets",
     "tr-tui-applying-config": "Application de la configuration système",
     "tr-tui-config-applied": "Configuration appliquée avec succès !",
