--- a/www/langs/custom.id.json
+++ b/www/langs/custom.id.json
@@ -163,11 +163,10 @@
     "tr-tui-no-config-vars": "Tidak ada variabel konfigurasi yang diatur",
     "tr-tui-postinst-not-found": "File postinst.sh tidak ditemukan",
     "tr-tui-setup-not-found": "File setup.sh tidak ditemukan",
-    "tr-tui-apply-confirm-title": "Akan melakukan operasi berikut:",
     "tr-tui-apply-confirm-step1": "1. Instal paket melalui postinst.sh",
     "tr-tui-apply-confirm-step2": "2. Terapkan pengaturan melalui setup.sh",
     "tr-tui-apply-confirm-step3": "3. Restart (dengan konfirmasi)",
-    "tr-tui-apply-confirm-question": "Jalankan sekarang?",
+    "tr-tui-apply-confirm-question": "Jalankan?",
     "tr-tui-installing-packages": "Menginstal paket",
     "tr-tui-applying-config": "Menerapkan konfigurasi sistem",
     "tr-tui-config-applied": "Konfigurasi berhasil diterapkan!",
