--- a/www/langs/custom.ko.json
+++ b/www/langs/custom.ko.json
@@ -163,11 +163,10 @@
     "tr-tui-no-config-vars": "설정된 구성 변수가 없습니다",
     "tr-tui-postinst-not-found": "postinst.sh 파일을 찾을 수 없습니다",
     "tr-tui-setup-not-found": "setup.sh 파일을 찾을 수 없습니다",
-    "tr-tui-apply-confirm-title": "다음 작업이 실행됩니다:",
     "tr-tui-apply-confirm-step1": "1. postinst.sh를 통해 패키지 설치",
     "tr-tui-apply-confirm-step2": "2. setup.sh를 통해 설정 적용",
     "tr-tui-apply-confirm-step3": "3. 재시작 (확인 필요)",
-    "tr-tui-apply-confirm-question": "지금 실행하시겠습니까?",
+    "tr-tui-apply-confirm-question": "실행하시겠습니까?",
     "tr-tui-installing-packages": "패키지 설치 중",
     "tr-tui-applying-config": "시스템 구성 적용 중",
     "tr-tui-config-applied": "구성이 성공적으로 적용되었습니다!",
