--- a/www/langs/custom.pl.json
+++ b/www/langs/custom.pl.json
@@ -163,11 +163,10 @@
     "tr-tui-no-config-vars": "Brak zmiennych konfiguracyjnych",
     "tr-tui-postinst-not-found": "Nie znaleziono pliku postinst.sh",
     "tr-tui-setup-not-found": "Nie znaleziono pliku setup.sh",
-    "tr-tui-apply-confirm-title": "Zostaną wykonane następujące czynności:",
     "tr-tui-apply-confirm-step1": "1. Instalacja pakietów przez postinst.sh",
     "tr-tui-apply-confirm-step2": "2. Zastosowanie ustawień przez setup.sh",
     "tr-tui-apply-confirm-step3": "3. Ponowne uruchomienie (z potwierdzeniem)",
-    "tr-tui-apply-confirm-question": "Wykonać teraz?",
+    "tr-tui-apply-confirm-question": "Wykonać?",
     "tr-tui-installing-packages": "Instalowanie pakietów",
     "tr-tui-applying-config": "Stosowanie konfiguracji systemu",
     "tr-tui-config-applied": "Konfiguracja zastosowana pomyślnie!",
