--- a/www/langs/custom.pt-br.json
+++ b/www/langs/custom.pt-br.json
@@ -163,11 +163,10 @@
     "tr-tui-no-config-vars": "Nenhuma variável de configuração definida",
     "tr-tui-postinst-not-found": "Arquivo postinst.sh não encontrado",
     "tr-tui-setup-not-found": "Arquivo setup.sh não encontrado",
-    "tr-tui-apply-confirm-title": "As seguintes operações serão executadas:",
     "tr-tui-apply-confirm-step1": "1. Instalar pacotes via postinst.sh",
     "tr-tui-apply-confirm-step2": "2. Aplicar configurações via setup.sh",
     "tr-tui-apply-confirm-step3": "3. Reiniciar (com confirmação)",
-    "tr-tui-apply-confirm-question": "Executar agora?",
+    "tr-tui-apply-confirm-question": "Executar?",
     "tr-tui-installing-packages": "Instalando pacotes",
     "tr-tui-applying-config": "Aplicando configuração do sistema",
     "tr-tui-config-applied": "Configuração aplicada com sucesso!",
