--- a/www/langs/custom.ru.json
+++ b/www/langs/custom.ru.json
@@ -163,11 +163,10 @@
     "tr-tui-no-config-vars": "Переменные конфигурации не заданы",
     "tr-tui-postinst-not-found": "Файл postinst.sh не найден",
     "tr-tui-setup-not-found": "Файл setup.sh не найден",
-    "tr-tui-apply-confirm-title": "Будут выполнены следующие операции:",
     "tr-tui-apply-confirm-step1": "1. Установка пакетов через postinst.sh",
     "tr-tui-apply-confirm-step2": "2. Применение настроек через setup.sh",
     "tr-tui-apply-confirm-step3": "3. Перезагрузка (с подтверждением)",
-    "tr-tui-apply-confirm-question": "Выполнить сейчас?",
+    "tr-tui-apply-confirm-question": "Выполнит?",
     "tr-tui-installing-packages": "Установка пакетов",
     "tr-tui-applying-config": "Применение конфигурации системы",
     "tr-tui-config-applied": "Конфигурация успешно применена!",
