--- a/www/langs/custom.vi.json
+++ b/www/langs/custom.vi.json
@@ -163,11 +163,10 @@
     "tr-tui-no-config-vars": "Không có biến cấu hình nào được đặt",
     "tr-tui-postinst-not-found": "Không tìm thấy tệp postinst.sh",
     "tr-tui-setup-not-found": "Không tìm thấy tệp setup.sh",
-    "tr-tui-apply-confirm-title": "Các thao tác sau sẽ được thực hiện:",
     "tr-tui-apply-confirm-step1": "1. Cài đặt gói qua postinst.sh",
     "tr-tui-apply-confirm-step2": "2. Áp dụng cài đặt qua setup.sh",
     "tr-tui-apply-confirm-step3": "3. Khởi động lại (với xác nhận)",
-    "tr-tui-apply-confirm-question": "Thực hiện ngay bây giờ?",
+    "tr-tui-apply-confirm-question": "Thực hiện?",
     "tr-tui-installing-packages": "Đang cài đặt gói",
     "tr-tui-applying-config": "Đang áp dụng cấu hình hệ thống",
     "tr-tui-config-applied": "Cấu hình đã được áp dụng thành công!",
