--- a/www/langs/custom.zh-cn.json
+++ b/www/langs/custom.zh-cn.json
@@ -163,11 +163,10 @@
     "tr-tui-no-config-vars": "未设置配置变量",
     "tr-tui-postinst-not-found": "未找到 postinst.sh 文件",
     "tr-tui-setup-not-found": "未找到 setup.sh 文件",
-    "tr-tui-apply-confirm-title": "将执行以下操作：",
     "tr-tui-apply-confirm-step1": "1. 通过 postinst.sh 安装软件包",
     "tr-tui-apply-confirm-step2": "2. 通过 setup.sh 应用设置",
     "tr-tui-apply-confirm-step3": "3. 重启（需确认）",
-    "tr-tui-apply-confirm-question": "现在执行吗？",
+    "tr-tui-apply-confirm-question": "执行？",
     "tr-tui-installing-packages": "正在安装软件包",
     "tr-tui-applying-config": "正在应用系统配置",
     "tr-tui-config-applied": "配置应用成功！",
