--- a/www/langs/custom.zh-tw.json
+++ b/www/langs/custom.zh-tw.json
@@ -163,11 +163,10 @@
     "tr-tui-no-config-vars": "未設定配置變數",
     "tr-tui-postinst-not-found": "找不到 postinst.sh 檔案",
     "tr-tui-setup-not-found": "找不到 setup.sh 檔案",
-    "tr-tui-apply-confirm-title": "將執行以下操作：",
     "tr-tui-apply-confirm-step1": "1. 透過 postinst.sh 安裝套件",
     "tr-tui-apply-confirm-step2": "2. 透過 setup.sh 套用設定",
     "tr-tui-apply-confirm-step3": "3. 重新啟動（需確認）",
-    "tr-tui-apply-confirm-question": "現在執行嗎？",
+    "tr-tui-apply-confirm-question": "執行？",
     "tr-tui-installing-packages": "正在安裝套件",
     "tr-tui-applying-config": "正在套用系統配置",
     "tr-tui-config-applied": "配置套用成功！",
