--- a/www/langs/ja.json
+++ b/www/langs/ja.json
@@ -10,7 +10,7 @@
     "tr-version-build": "このビルドについて",
     "tr-links": "リンク",
     "tr-model": "モデル",
-    "tr-target": "プラットフォーム",
+    "tr-target": "ターゲット",
     "tr-version": "バージョン",
     "tr-date": "日付",
     "tr-downloads": "イメージのダウンロード",
