--- a/www/langs/custom.en.json
+++ b/www/langs/custom.en.json
@@ -14,6 +14,8 @@
     
     "tr-import-settings": "Import",
     "tr-export-settings": "Export",
+
+    "tr-custom-build-label": "Custom Build (Unofficial)",
     
     "tr-asu-status-checking": "Checking...",
     "tr-asu-status-online": "Online",
