--- a/www/langs/custom.id.json
+++ b/www/langs/custom.id.json
@@ -14,6 +14,8 @@
     
     "tr-import-settings": "Impor",
     "tr-export-settings": "Ekspor",
+
+    "tr-custom-build-label": "Build Kustom (Tidak Resmi)",
     
     "tr-asu-status-checking": "Memeriksa...",
     "tr-asu-status-online": "Online",
