--- a/www/langs/custom.ko.json
+++ b/www/langs/custom.ko.json
@@ -14,6 +14,8 @@
     
     "tr-import-settings": "가져오기",
     "tr-export-settings": "내보내기",
+
+    "tr-custom-build-label": "커스텀 빌드 (비공식)",
     
     "tr-asu-status-checking": "확인 중...",
     "tr-asu-status-online": "온라인",
