--- a/www/langs/custom.pt-br.json
+++ b/www/langs/custom.pt-br.json
@@ -14,6 +14,8 @@
     
     "tr-import-settings": "Importar",
     "tr-export-settings": "Exportar",
+
+    "tr-custom-build-label": "Build Personalizado (Não Oficial)",
     
     "tr-asu-status-checking": "Verificando...",
     "tr-asu-status-online": "Online",
