--- a/www/langs/custom.vi.json
+++ b/www/langs/custom.vi.json
@@ -14,6 +14,8 @@
     
     "tr-import-settings": "Nhập",
     "tr-export-settings": "Xuất",
+
+    "tr-custom-build-label": "Bản Dựng Tùy Chỉnh (Không Chính Thức)",
     
     "tr-asu-status-checking": "Đang kiểm tra...",
     "tr-asu-status-online": "Trực tuyến",
