--- a/www/langs/custom.zh-tw.json
+++ b/www/langs/custom.zh-tw.json
@@ -14,6 +14,8 @@
     
     "tr-import-settings": "匯入",
     "tr-export-settings": "匯出",
+
+    "tr-custom-build-label": "自訂建置（非官方）",
     
     "tr-asu-status-checking": "檢查中...",
     "tr-asu-status-online": "線上",
