--- a/www/langs/custom.ja.json
+++ b/www/langs/custom.ja.json
@@ -187,5 +187,8 @@
     "tr-tui-pd": "PD",
 
     "tr-tui-isp-info": "ISP情報:",
-    "tr-tui-manual-config-required": "手動で接続設定を行ってください。"
+    "tr-tui-manual-config-required": "手動で接続設定を行ってください。",
+    
+    "tr-tui-custom-feeds": "カスタムフィード",
+    "tr-feed-gspotx2f": "gSpotx2fリポジトリ"
 }
