--- a/www/langs/custom.ja.json
+++ b/www/langs/custom.ja.json
@@ -190,5 +190,5 @@
     "tr-tui-manual-config-required": "手動で接続設定を行ってください。",
     
     "tr-tui-custom-feeds": "カスタムフィード",
-    "tr-feed-gspotx2f": "gSpotx2fリポジトリ"
+    "tr-tui-feed-gspotx2f": "gSpotx2fリポジトリ"
 }
