--- a/www/langs/custom.en.json
+++ b/www/langs/custom.en.json
@@ -189,5 +189,8 @@
     "tr-tui-pd": "PD",
 
     "tr-tui-isp-info": "ISP Information:",
-    "tr-tui-manual-config-required": "Please configure connection settings manually."
+    "tr-tui-manual-config-required": "Please configure connection settings manually.",
+
+    "tr-tui-custom-feeds": "Custom Feeds",
+    "tr-tui-feed-gspotx2f": "gSpotx2f Repository"
 }
