--- a/www/langs/custom.zh-cn.json
+++ b/www/langs/custom.zh-cn.json
@@ -186,5 +186,8 @@
     "tr-tui-ui-install-success": "whiptail 安装成功！",
     "tr-tui-ui-install-failed": "安装失败，使用简单模式",
     "tr-tui-gua": "GUA",
-    "tr-tui-pd": "PD"
+    "tr-tui-pd": "PD",
+
+    "tr-tui-custom-feeds": "自定义源",
+    "tr-tui-feed-gspotx2f": "gSpotx2f 仓库"
 }
