--- a/www/langs/custom.ja.json
+++ b/www/langs/custom.ja.json
@@ -164,9 +164,10 @@
     "tr-tui-no-config-vars": "設定変数がありません",
     "tr-tui-postinst-not-found": "postinst.shファイルが見つかりません",
     "tr-tui-setup-not-found": "setup.shファイルが見つかりません",
-    "tr-tui-apply-confirm-step1": "1. postinst.shでパッケージをインストール",
-    "tr-tui-apply-confirm-step2": "2. setup.shで設定を適用",
-    "tr-tui-apply-confirm-step3": "3. 再起動（確認有）",
+    "tr-tui-apply-confirm-step1": "1. パッケージインストール (postinst.sh)",
+    "tr-tui-apply-confirm-step2": "2. カスタムパッケージインストール (customfeeds.sh)",
+    "tr-tui-apply-confirm-step3": "3. 設定適用 (setup.sh)",
+    "tr-tui-apply-confirm-step3": "4. 再起動（確認あり）",
     "tr-tui-apply-confirm-question": "実行しますか？",
     "tr-tui-installing-packages": "パッケージをインストール中",
     "tr-tui-installing-custom-packages": "カスタムフィードパッケージをインストール中",
