--- a/www/langs/custom.en.json
+++ b/www/langs/custom.en.json
@@ -165,9 +165,10 @@
     "tr-tui-no-config-vars": "No configuration variables set",
     "tr-tui-postinst-not-found": "postinst.sh file not found",
     "tr-tui-setup-not-found": "setup.sh file not found",
-    "tr-tui-apply-confirm-step1": "1. Install packages via postinst.sh",
-    "tr-tui-apply-confirm-step2": "2. Apply settings via setup.sh",
-    "tr-tui-apply-confirm-step3": "3. Reboot (with confirmation)",
+    "tr-tui-apply-confirm-step1": "1. Install packages (postinst.sh)",
+    "tr-tui-apply-confirm-step2": "2. Install custom packages (customfeeds.sh)",
+    "tr-tui-apply-confirm-step3": "3. Apply configuration (setup.sh)",
+    "tr-tui-apply-confirm-step4": "4. Reboot (confirmation required)",
     "tr-tui-apply-confirm-question": "Execute?",
     "tr-tui-installing-packages": "Installing packages",
     "tr-tui-installing-custom-packages": "Installing custom packages",
