--- a/www/langs/custom.en.json
+++ b/www/langs/custom.en.json
@@ -196,5 +196,6 @@
     "tr-tui-manual-config-required": "Please configure connection settings manually.",
 
     "tr-tui-custom-feeds": "Custom Feeds",
-    "tr-tui-feed-gspotx2f": "gSpotx2f Repository"
+    "tr-tui-feed-gspotx2f": "gSpotx2f Repository",
+    "tr-tui-feed-jerrykuku": "jerrykuku Repository"   
 }
