--- a/www/langs/custom.ja.json
+++ b/www/langs/custom.ja.json
@@ -194,5 +194,6 @@
     "tr-tui-manual-config-required": "手動で接続設定を行ってください。",
     
     "tr-tui-custom-feeds": "カスタムフィード",
-    "tr-tui-feed-gspotx2f": "gSpotx2fリポジトリ"
+    "tr-tui-feed-gspotx2f": "gSpotx2fリポジトリ",
+    "tr-tui-feed-jerrykuku": "jerrykukuリポジトリ"
 }
