--- a/www/langs/custom.ja.json
+++ b/www/langs/custom.ja.json
@@ -144,6 +144,7 @@
 
     "tr-feedback-link": "フォーラム",
 
+    "tr-tui-custom-packages": "パッケージ",
     "tr-tui-main-menu": "メインメニュー",
     "tr-tui-select": "選択",
     "tr-tui-back": "戻る",
@@ -193,7 +194,7 @@
     "tr-tui-isp-info": "ISP情報:",
     "tr-tui-manual-config-required": "手動で接続設定を行ってください。",
     
-    "tr-tui-custom-feeds": "カスタムフィード",
+    "tr-tui-custom-feeds": "カスタムフィードパッケージ",
     "tr-tui-feed-gspotx2f": "gSpotx2fリポジトリ",
     "tr-tui-feed-jerrykuku": "jerrykukuリポジトリ"
 }
