--- a/www/langs/custom.ja.json
+++ b/www/langs/custom.ja.json
@@ -144,7 +144,7 @@
 
     "tr-feedback-link": "フォーラム",
 
-    "tr-tui-custom-packages": "パッケージ",
+    "tr-tui-packages": "パッケージ",
     "tr-tui-main-menu": "メインメニュー",
     "tr-tui-select": "選択",
     "tr-tui-back": "戻る",
